--- a/hole.css
+++ b/hole.css
@@ -21,7 +21,7 @@
 }
 .holelib-input {
   margin: 0;
-  padding-top: 16px;
+  margin-top: 16px;
   line-height: 32px;
   height: 32px;
   font-size: 18px;
